tcp-echo/deployment/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tcp-echo-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tcp-echo
        version: v1
    spec:
      containers:
        - name: tcp-echo
          image: rekzi/tcp-echo:latest
          args: [ "-version", "v1" ]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tcp-echo-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tcp-echo
        version: v2
    spec:
      containers:
        - name: tcp-echo
          image: rekzi/tcp-echo:latest
          args: [ "-version", "v2" ]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
