tcp-echo/deployment/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tcp-echo
spec:
  hosts:
    - "*"
  gateways:
    - tcp-gateway
  tcp:
  - match:
      - port: 31400
    route:
      - destination:
          host: tcp-echo
          port:
            number: 9000
          subset: v1
        weight: 90
      - destination:
          host: tcp-echo
          port:
            number: 9000
          subset: v2
        weight: 10
